[gd_scene load_steps=30 format=2]

[ext_resource path="res://scenes/enemies/enemy_base/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/enemies/level 3/gunner/Gunner.gd" type="Script" id=2]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/idle/gunner_idle_1.png" type="Texture" id=3]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/idle/gunner_idle_2.png" type="Texture" id=4]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/idle/gunner_idle_3.png" type="Texture" id=5]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/idle/gunner_idle_0.png" type="Texture" id=6]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/walk/gunner_walk_0.png" type="Texture" id=7]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/walk/gunner_walk_1.png" type="Texture" id=8]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/walk/gunner_walk_5.png" type="Texture" id=9]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/walk/gunner_walk_4.png" type="Texture" id=10]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/walk/gunner_walk_2.png" type="Texture" id=11]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/walk/gunner_walk_3.png" type="Texture" id=12]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/fire/gunner_fire_1.png" type="Texture" id=13]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/fire/gunner_fire_0.png" type="Texture" id=14]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/fire/gunner_fire_3.png" type="Texture" id=15]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/death/gunner_death_5.png" type="Texture" id=16]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/death/gunner_death_3.png" type="Texture" id=17]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/death/gunner_death_0.png" type="Texture" id=18]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/death/gunner_death_7.png" type="Texture" id=19]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/death/gunner_death_2.png" type="Texture" id=20]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/death/gunner_death_4.png" type="Texture" id=21]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/death/gunner_death_6.png" type="Texture" id=22]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/fire/gunner_fire_2.png" type="Texture" id=23]
[ext_resource path="res://assets/level3 - factory/enemies/gunner/death/gunner_death_1.png" type="Texture" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 23 ), ExtResource( 15 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 22 ), ExtResource( 19 ) ],
"loop": true,
"name": "die",
"speed": 9.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 74 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 74 )

[sub_resource type="CircleShape2D" id=4]
radius = 544.004

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 253, 74 )

[node name="Gunner" instance=ExtResource( 1 )]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )
speed = 80.0
damage = 15
gravity = 400

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )

[node name="Body" parent="." index="2"]
position = Vector2( 1, 4 )
shape = SubResource( 2 )

[node name="GroundDetect" type="RayCast2D" parent="." index="3"]
position = Vector2( -38, 78 )
enabled = true

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 1, 4 )
shape = SubResource( 3 )

[node name="CollisionShape2D" parent="DetectionRange" index="0"]
shape = SubResource( 4 )

[node name="AttackRange" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange" index="0"]
position = Vector2( -285, 4 )
shape = SubResource( 5 )

[node name="AttackTimer" type="Timer" parent="." index="7"]
wait_time = 1.5
one_shot = true

[node name="FireTimer" type="Timer" parent="." index="8"]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
